test/end-to-end/runnable/loop.crow
import
	crow/io/print: out, print

main void() summon
	x mut nat = 0
	y nat = loop
		if x == 5
			break x * 2
		else
			x +:= 1
			continue
	out print "x is {x}, y is {y}"

	until x == 15
		x +:= 1
	out print "x is {x}"

	while x > 10
		x -:= 1
	out print "x is {x}"
	()
