test/end-to-end/compile-errors/mut-param.crow
main void()
	x mut nat = 0
	x f
	info log "{x}"

f void(a mut nat)
	a +:= 1
